<resources>
    <string name="app_name">Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_addClock">Add Clock</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_finish">Finish</string>
    <string name="action_cancel">Cancel</string>

    <string name="menu_1">All</string>
    <string name="menu_2">Detail</string>
    <string name="menu_3">Record</string>
    <string name="menu_4">History</string>
    <string name="menu_5">Setting</string>

    <string name="fragment_home_balance">Balance</string>
    <string name="fragment_home_income">Income</string>
    <string name="fragment_home_expense">Expense</string>

    <string name="fragment_input_title">Record</string>
    <string name="fragment_input_name">Name</string>
    <string name="fragment_input_dollar">Cost</string>
    <string name="fragment_input_date">Date</string>
    <string name="fragment_input_type">Type</string>
    <string name="fragment_input_income">Income</string>
    <string name="fragment_input_expense">Expense</string>
    <string name="fragment_input_category">Category</string>
    <string name="fragment_input_submit">Submit</string>

    <string name="fragment_detail_head_expense">Expenses</string>
    <string name="fragment_detail_head_income">Income</string>
    <string name="fragment_detail_head_balance">Balance</string>

    <string name="fragment_setting_clock_sun">SUN</string>
    <string name="fragment_setting_clock_mon">MON</string>
    <string name="fragment_setting_clock_tue">TUE</string>
    <string name="fragment_setting_clock_wed">WED</string>
    <string name="fragment_setting_clock_thu">THU</string>
    <string name="fragment_setting_clock_fri">FRI</string>
    <string name="fragment_setting_clock_sat">SAT</string>

    <string name="activity_clock_weekday">Weekday</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_clock">Clock</string>

    <string name="alert_delete_record">Delete Record</string>
    <string name="alert_delete_clock">Delete Clock</string>
    <string name="alert_delete_record_info">Are you sure you want to delete record?</string>
    <string name="alert_delete_clock_info">Are you sure you want to delete clock?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
