<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_input_name"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_dollar"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/layout_name"
        app:layout_constraintStart_toStartOf="@+id/layout_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <EditText
            android:id="@+id/edit_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_input_dollar"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_input_date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/layout_dollar"
        app:layout_constraintTop_toBottomOf="@+id/layout_dollar" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/text_type"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_type" />

    <RadioGroup
        android:id="@+id/radioGroup_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/text_type"
        app:layout_constraintStart_toEndOf="@+id/text_type"
        app:layout_constraintTop_toTopOf="@+id/text_type"
        app:layout_constraintVertical_bias="0.533">
        <RadioButton
            android:id="@+id/radioButton_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_input_expense" />
        <RadioButton
            android:id="@+id/radioButton_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_input_income" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_input_submit"
        app:layout_constraintStart_toStartOf="@+id/spinner_category"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_input_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_date"
        app:layout_constraintStart_toEndOf="@+id/text_date"
        app:layout_constraintTop_toTopOf="@+id/text_date" />

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_input_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_date"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

</android.support.constraint.ConstraintLayout>