<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/clockCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginRight="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/textClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorBlack"
                android:text="17:24"
                android:textSize="55sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <Switch
                android:id="@+id/clock_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">
            <TextView
                android:id="@+id/textSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/weekday_margin"
                android:layout_marginLeft="@dimen/weekday_margin"
                android:layout_marginRight="@dimen/weekday_margin"
                android:layout_marginStart="@dimen/weekday_margin"
                android:text="@string/fragment_setting_clock_sun"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/weekday_margin"
                android:layout_marginLeft="@dimen/weekday_margin"
                android:layout_marginRight="@dimen/weekday_margin"
                android:layout_marginStart="@dimen/weekday_margin"
                android:text="@string/fragment_setting_clock_mon"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/weekday_margin"
                android:layout_marginLeft="@dimen/weekday_margin"
                android:layout_marginRight="@dimen/weekday_margin"
                android:layout_marginStart="@dimen/weekday_margin"
                android:text="@string/fragment_setting_clock_tue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/weekday_margin"
                android:layout_marginLeft="@dimen/weekday_margin"
                android:layout_marginRight="@dimen/weekday_margin"
                android:layout_marginStart="@dimen/weekday_margin"
                android:text="@string/fragment_setting_clock_wed"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/weekday_margin"
                android:layout_marginLeft="@dimen/weekday_margin"
                android:layout_marginRight="@dimen/weekday_margin"
                android:layout_marginStart="@dimen/weekday_margin"
                android:text="@string/fragment_setting_clock_thu"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/weekday_margin"
                android:layout_marginLeft="@dimen/weekday_margin"
                android:layout_marginRight="@dimen/weekday_margin"
                android:layout_marginStart="@dimen/weekday_margin"
                android:text="@string/fragment_setting_clock_fri"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/weekday_margin"
                android:layout_marginLeft="@dimen/weekday_margin"
                android:layout_marginRight="@dimen/weekday_margin"
                android:layout_marginStart="@dimen/weekday_margin"
                android:text="@string/fragment_setting_clock_sat"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/line"
            android:visibility="gone"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="146dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/operation_select"
                android:layout_marginRight="@dimen/operation_select"
                android:text="Delete"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/operation_select"
                android:layout_marginRight="@dimen/operation_select"
                android:text="OK"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>