<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="104dp"
        android:text="@string/fragment_home_balance"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_home_income"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_balance"
        app:layout_constraintTop_toBottomOf="@+id/text_balance" />

    <TextView
        android:id="@+id/text_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/fragment_home_expense"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_income"
        app:layout_constraintTop_toBottomOf="@+id/text_income" />

    <TextView
        android:id="@+id/text_balance_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="100"
        app:layout_constraintStart_toEndOf="@+id/text_balance"
        app:layout_constraintTop_toTopOf="@+id/text_balance" />

    <TextView
        android:id="@+id/text_income_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="200"
        app:layout_constraintStart_toEndOf="@+id/text_income"
        app:layout_constraintTop_toTopOf="@+id/text_income" />

    <TextView
        android:id="@+id/text_expense_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="100"
        app:layout_constraintStart_toEndOf="@+id/text_expense"
        app:layout_constraintTop_toTopOf="@+id/text_expense" />
</android.support.constraint.ConstraintLayout>